--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.10)
 set( CMAKE_VERBOSE_MAKEFILE ON )
 project(bot)
 
@@ -11,6 +11,7 @@ get_filename_component( BOT_SHARED "${CMAKE_CURRENT_SOURCE_DIR}/../shared" ABSOL
 include_directories( ${BOT_SHARED})
 
 include( "${CINDER_PATH}/proj/cmake/modules/cinderMakeApp.cmake" )
+
 
 set(SRC_FILES
         ${APP_PATH}/src/BotApp.cpp
@@ -25,3 +26,4 @@ ci_make_app(
         CINDER_PATH ${CINDER_PATH}
 
 )
+target_link_libraries(bot libJetsonGPIO.a)
