--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SRC_FILES
         ${APP_PATH}/src/graph/GraphRenderer.cpp
         ${APP_PATH}/src/motor/Motor.cpp
         ${APP_PATH}/src/motor/MotorControl.cpp
+        ${APP_PATH}/src/gui/FBOWindow.cpp
         )
 
 ci_make_app(
