--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=38,81
 Size=400,400
 Collapsed=0
 
@@ -9,9 +9,9 @@ Size=641,330
 Collapsed=0
 
 [Window][test]
-Pos=304,418
-Size=519,384
-Collapsed=0
+Pos=140,248
+Size=2493,1014
+Collapsed=1
 
 [Window][graph]
 Pos=1263,341
@@ -19,12 +19,77 @@ Size=806,433
 Collapsed=0
 
 [Window][graphs]
-Pos=237,552
-Size=749,402
+Pos=1845,19
+Size=648,1364
 Collapsed=0
+DockId=0x00000002,0
 
 [Window][motors]
-Pos=97,68
+Pos=1011,381
 Size=479,329
 Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=2560,1440
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=1526,22
+Size=1034,1418
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Example: Documents]
+Pos=903,239
+Size=607,944
+Collapsed=0
+
+[Window][Lettuce]
+Pos=911,335
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,0
+
+[Window][Eggplant]
+Pos=911,335
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,1
+
+[Window][Carrot]
+Pos=911,335
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,2
+
+[Window][A Rather Long Title]
+Pos=911,335
+Size=591,840
+Collapsed=0
+DockId=0xA086D808,3
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=420,391
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=351,38
+Size=2220,1373
+Collapsed=0
+
+[Window][Graphs]
+Pos=0,22
+Size=1524,1418
+Collapsed=0
+DockId=0x00000001,0
+
+[Docking][Data]
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2560,1418 Split=X
+  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=1484,1364 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1843,1364 CentralNode=1 Selected=0x93CE11C7
+    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=648,1364 Selected=0x946214F1
+  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1007,1364 Selected=0xE927CF2F
+DockSpace     ID=0xA086D808 Pos=911,335 Size=591,840 CentralNode=1 Selected=0xDD6676AB
 
