--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -31,12 +31,12 @@ Collapsed=0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2560,1440
+Size=2493,1383
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1526,22
-Size=1034,1418
+Pos=1916,701
+Size=577,682
 Collapsed=0
 DockId=0x00000007,0
 
@@ -81,15 +81,17 @@ Collapsed=0
 
 [Window][Graphs]
 Pos=0,22
-Size=1524,1418
+Size=2493,677
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000004,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2560,1418 Split=X
-  DockNode    ID=0x00000006 Parent=0x3BC79352 SizeRef=1484,1364 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1843,1364 CentralNode=1 Selected=0x93CE11C7
-    DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=648,1364 Selected=0x946214F1
-  DockNode    ID=0x00000007 Parent=0x3BC79352 SizeRef=1007,1364 Selected=0xE927CF2F
-DockSpace     ID=0xA086D808 Pos=911,335 Size=591,840 CentralNode=1 Selected=0xDD6676AB
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2493,1361 Split=Y
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=2493,677 Selected=0x93CE11C7
+  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=2493,682 Split=X
+    DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1965,1364 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1843,1364 CentralNode=1 Selected=0x93CE11C7
+      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=648,1364 Selected=0x946214F1
+    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=593,1364 Selected=0xE927CF2F
+DockSpace       ID=0xA086D808 Pos=911,335 Size=591,840 CentralNode=1 Selected=0xDD6676AB
 
