--- a/code/assets/settings/MotorSettings.json
+++ b/code/assets/settings/MotorSettings.json
@@ -3,11 +3,47 @@
       "key" : "FRHip",
       "type" : "motor",
       "value" : {
-         "id" : 0,
-         "max" : 0,
-         "min" : 0,
+         "id" : 1,
+         "max" : 30,
+         "min" : -30,
          "offset" : 0,
-         "port" : "ttyMotorName",
+         "port" : "ttyMotor1",
+         "startValue" : 0
+      }
+   },
+   {
+      "key" : "FLHip",
+      "type" : "motor",
+      "value" : {
+         "id" : 2,
+         "max" : 30,
+         "min" : -30,
+         "offset" : 0,
+         "port" : "ttyMotor2",
+         "startValue" : 0
+      }
+   },
+   {
+      "key" : "BRHip",
+      "type" : "motor",
+      "value" : {
+         "id" : 3,
+         "max" : 30,
+         "min" : -30,
+         "offset" : 0,
+         "port" : "ttyMotor3",
+         "startValue" : 0
+      }
+   },
+   {
+      "key" : "BLHip",
+      "type" : "motor",
+      "value" : {
+         "id" : 4,
+         "max" : 30,
+         "min" : -30,
+         "offset" : 0,
+         "port" : "ttyMotor4",
          "startValue" : 0
       }
    }
