--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -25,9 +25,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][motors]
-Pos=1011,381
-Size=479,329
+Pos=0,889
+Size=1710,42
 Collapsed=0
+DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -35,10 +36,10 @@ Size=2493,1383
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1916,701
-Size=577,682
+Pos=1810,22
+Size=683,1093
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x0000000B,0
 
 [Window][Example: Documents]
 Pos=903,239
@@ -75,23 +76,44 @@ Size=420,391
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=351,38
-Size=2220,1373
+Pos=0,22
+Size=1710,865
 Collapsed=0
+DockId=0x00000009,0
 
 [Window][Graphs]
-Pos=0,22
-Size=2493,677
+Pos=0,1117
+Size=2493,266
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000005,0
+
+[Window][Example: Long text display]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][ModelRenderer]
+Pos=0,22
+Size=1808,1093
+Collapsed=0
+DockId=0x00000001,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2493,1361 Split=Y
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=2493,677 Selected=0x93CE11C7
-  DockNode      ID=0x00000005 Parent=0x3BC79352 SizeRef=2493,682 Split=X
-    DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=1965,1364 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000006 SizeRef=1843,1364 CentralNode=1 Selected=0x93CE11C7
-      DockNode  ID=0x00000002 Parent=0x00000006 SizeRef=648,1364 Selected=0x946214F1
-    DockNode    ID=0x00000007 Parent=0x00000005 SizeRef=593,1364 Selected=0xE927CF2F
-DockSpace       ID=0xA086D808 Pos=911,335 Size=591,840 CentralNode=1 Selected=0xDD6676AB
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2493,1361 Split=Y
+  DockNode          ID=0x00000004 Parent=0x3BC79352 SizeRef=2493,1093 Split=X
+    DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1808,1390 Split=Y
+      DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=1920,658 Selected=0x6D551092
+      DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=1920,398 Split=Y
+        DockNode    ID=0x00000003 Parent=0x0000000A SizeRef=1920,32 Selected=0x6D19DD9F
+        DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1920,364 Split=X
+          DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=1843,1364 CentralNode=1 Selected=0xAF4A00B3
+          DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=648,1364 Selected=0x946214F1
+    DockNode        ID=0x0000000B Parent=0x00000004 SizeRef=683,1390 Selected=0xE927CF2F
+  DockNode          ID=0x00000005 Parent=0x3BC79352 SizeRef=2493,266 Selected=0x93CE11C7
+DockSpace           ID=0xA086D808 Pos=911,335 Size=591,840 CentralNode=1 Selected=0xDD6676AB
 
