--- a/code/assets/settings/RobotSettings.json
+++ b/code/assets/settings/RobotSettings.json
@@ -1,12 +1,37 @@
 [
    {
-      "key" : "windowSizeX",
-      "type" : "int",
-      "value" : 1920
+      "key" : "bodyLength",
+      "type" : "float",
+      "value" : 352
    },
    {
-      "key" : "windowSizeY",
-      "type" : "int",
-      "value" : 1080
+      "key" : "bodyWidth",
+      "type" : "float",
+      "value" : 120
+   },
+   {
+      "key" : "hipOffsetX ",
+      "type" : "float",
+      "value" : 60
+   },
+   {
+      "key" : "hipOffsetZ",
+      "type" : "float",
+      "value" : 74
+   },
+   {
+      "key" : "upperLegLength",
+      "type" : "float",
+      "value" : 210
+   },
+   {
+      "key" : "underLegLength",
+      "type" : "float",
+      "value" : 250
+   },
+   {
+      "key" : "footRadius",
+      "type" : "float",
+      "value" : 20
    }
 ]
