--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -32,14 +32,14 @@ DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2493,1383
+Size=2512,715
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1810,22
-Size=683,1076
+Pos=2111,22
+Size=382,1361
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000006,1
 
 [Window][Example: Documents]
 Pos=903,239
@@ -82,10 +82,10 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Graphs]
-Pos=0,1100
-Size=2493,283
+Pos=0,549
+Size=2125,166
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x0000000B,0
 
 [Window][Example: Long text display]
 Pos=60,60
@@ -99,21 +99,27 @@ Collapsed=0
 
 [Window][ModelRenderer]
 Pos=0,22
-Size=1808,1076
+Size=2125,525
 Collapsed=0
 DockId=0x00000001,0
 
+[Window][performance]
+Pos=2127,22
+Size=385,693
+Collapsed=0
+DockId=0x00000006,0
+
 [Docking][Data]
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2493,1361 Split=Y
-  DockNode          ID=0x00000004 Parent=0x3BC79352 SizeRef=2493,1076 Split=X
-    DockNode        ID=0x00000006 Parent=0x00000004 SizeRef=1808,1390 Split=Y
-      DockNode      ID=0x00000009 Parent=0x00000006 SizeRef=1920,658 Selected=0x6D551092
-      DockNode      ID=0x0000000A Parent=0x00000006 SizeRef=1920,398 Split=Y
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2512,693 Split=X
+  DockNode          ID=0x00000005 Parent=0x3BC79352 SizeRef=2109,1361 Split=Y
+    DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=2493,1033 Split=Y
+      DockNode      ID=0x00000009 Parent=0x00000004 SizeRef=1920,658 Selected=0x6D551092
+      DockNode      ID=0x0000000A Parent=0x00000004 SizeRef=1920,398 Split=Y
         DockNode    ID=0x00000003 Parent=0x0000000A SizeRef=1920,32 Selected=0x6D19DD9F
         DockNode    ID=0x00000008 Parent=0x0000000A SizeRef=1920,364 Split=X
           DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=1843,1364 CentralNode=1 Selected=0xAF4A00B3
           DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=648,1364 Selected=0x946214F1
-    DockNode        ID=0x0000000B Parent=0x00000004 SizeRef=683,1390 Selected=0xE927CF2F
-  DockNode          ID=0x00000005 Parent=0x3BC79352 SizeRef=2493,283 Selected=0x93CE11C7
+    DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=2493,326 Selected=0x93CE11C7
+  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=382,1361 Selected=0x82D79681
 DockSpace           ID=0xA086D808 Pos=911,335 Size=591,840 CentralNode=1 Selected=0xDD6676AB
 
