--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -31,6 +31,10 @@ set(SRC_FILES
         ${APP_PATH}/src/modelrenderer/MeshData.cpp
         ${APP_PATH}/src/modelrenderer/MeshDataPool.cpp
         ${APP_PATH}/src/modelrenderer/SymbolBatches.cpp
+        ${APP_PATH}/src/ik/IKControle.cpp
+        ${APP_PATH}/src/ik/IKControleLeg.cpp
+        ${APP_PATH}/src/ik/IKLeg.cpp
+        ${APP_PATH}/src/ik/IKModel.cpp
         )
 
 ci_make_app(
