--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -32,7 +32,7 @@ DockId=0x00000003,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2512,715
+Size=2560,1410
 Collapsed=0
 
 [Window][Dear ImGui Demo]
@@ -82,8 +82,8 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Graphs]
-Pos=0,549
-Size=2125,166
+Pos=0,1078
+Size=2166,332
 Collapsed=0
 DockId=0x0000000B,0
 
@@ -99,18 +99,24 @@ Collapsed=0
 
 [Window][ModelRenderer]
 Pos=0,22
-Size=2125,525
+Size=2166,1054
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][performance]
-Pos=2127,22
-Size=385,693
+Pos=2168,22
+Size=392,61
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000007,0
+
+[Window][IKControle]
+Pos=2168,85
+Size=392,1325
+Collapsed=0
+DockId=0x0000000D,0
 
 [Docking][Data]
-DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2512,693 Split=X
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2560,1388 Split=X
   DockNode          ID=0x00000005 Parent=0x3BC79352 SizeRef=2109,1361 Split=Y
     DockNode        ID=0x00000004 Parent=0x00000005 SizeRef=2493,1033 Split=Y
       DockNode      ID=0x00000009 Parent=0x00000004 SizeRef=1920,658 Selected=0x6D551092
@@ -120,6 +126,8 @@ DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2512,693 Split
           DockNode  ID=0x00000001 Parent=0x00000008 SizeRef=1843,1364 CentralNode=1 Selected=0xAF4A00B3
           DockNode  ID=0x00000002 Parent=0x00000008 SizeRef=648,1364 Selected=0x946214F1
     DockNode        ID=0x0000000B Parent=0x00000005 SizeRef=2493,326 Selected=0x93CE11C7
-  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=382,1361 Selected=0x82D79681
+  DockNode          ID=0x00000006 Parent=0x3BC79352 SizeRef=382,1361 Split=Y Selected=0x82D79681
+    DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=392,61 Selected=0x82D79681
+    DockNode        ID=0x0000000D Parent=0x00000006 SizeRef=392,1325 Selected=0x4F8F5D97
 DockSpace           ID=0xA086D808 Pos=911,335 Size=591,840 CentralNode=1 Selected=0xDD6676AB
 
