--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -1,6 +1,5 @@
 [Window][DockSpace Demo]
 Pos=0,0
-<<<<<<< HEAD
 Size=2560,1410
 Collapsed=0
 
@@ -28,10 +27,7 @@ DockId=0xA086D808,1
 
 [Window][Carrot]
 Pos=911,335
-Size=591,840
-=======
 Size=1920,1080
->>>>>>> b8462325a7716d1e812452b664a0d61e3a7be0ea
 Collapsed=0
 
 [Window][Debug##Default]
@@ -40,26 +36,21 @@ Size=400,400
 Collapsed=0
 
 [Window][performance]
-Pos=1486,22
-Size=434,1058
+Pos=1981,22
+Size=579,1388
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][IKControle]
-Pos=1931,22
-Size=564,1366
+Pos=1981,22
+Size=579,1388
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000004,1
 
 [Window][ModelRenderer]
 Pos=0,22
-<<<<<<< HEAD
-Size=2166,1388
-=======
 Size=1929,1077
->>>>>>> b8462325a7716d1e812452b664a0d61e3a7be0ea
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Graphs]
 Pos=0,862
@@ -74,11 +65,11 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=1920,1058 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2560,1388 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1929,1394 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=2495,1105 Split=X Selected=0xAF4A00B3
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1086,769 CentralNode=1
       DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=396,769 Selected=0x6D19DD9F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=2495,287 Selected=0x93CE11C7
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=564,1394 Selected=0x82D79681
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=564,1394 Selected=0x4F8F5D97
 
