--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -1,10 +1,10 @@
 [Window][DockSpace Demo]
 Pos=0,0
-Size=2560,1410
+Size=1920,1080
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=620,141
+Pos=425,128
 Size=382,1361
 Collapsed=1
 
@@ -36,21 +36,22 @@ Size=400,400
 Collapsed=0
 
 [Window][performance]
-Pos=1981,22
-Size=579,1388
+Pos=1486,22
+Size=434,1058
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][IKControle]
-Pos=1981,22
-Size=579,1388
+Pos=1486,22
+Size=434,1058
 Collapsed=0
 DockId=0x00000004,1
 
 [Window][ModelRenderer]
 Pos=0,22
-Size=1929,1077
+Size=1118,838
 Collapsed=0
+DockId=0x00000005,0
 
 [Window][Graphs]
 Pos=0,862
@@ -59,17 +60,17 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][motors]
-Pos=1088,22
-Size=396,838
+Pos=1120,22
+Size=364,838
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=2560,1388 Split=X
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=1920,1058 Split=X
   DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1929,1394 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=2495,1105 Split=X Selected=0xAF4A00B3
-      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1086,769 CentralNode=1
-      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=396,769 Selected=0x6D19DD9F
+      DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1118,769 CentralNode=1 Selected=0xAF4A00B3
+      DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=364,769 Selected=0x6D19DD9F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=2495,287 Selected=0x93CE11C7
   DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=564,1394 Selected=0x4F8F5D97
 
