--- a/code/assets/imgui.ini
+++ b/code/assets/imgui.ini
@@ -4,9 +4,10 @@ Size=1920,1080
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=425,128
-Size=382,1361
-Collapsed=1
+Pos=0,22
+Size=1582,1058
+Collapsed=0
+DockId=0x00000005,1
 
 [Window][Example: Documents]
 Pos=903,239
@@ -36,20 +37,20 @@ Size=400,400
 Collapsed=0
 
 [Window][performance]
-Pos=1486,22
-Size=434,1058
+Pos=1584,22
+Size=336,62
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000009,0
 
 [Window][IKControle]
-Pos=1486,22
-Size=434,1058
+Pos=1584,608
+Size=336,472
 Collapsed=0
-DockId=0x00000004,1
+DockId=0x00000008,0
 
 [Window][ModelRenderer]
 Pos=0,22
-Size=1118,838
+Size=1582,1058
 Collapsed=0
 DockId=0x00000005,0
 
@@ -65,12 +66,22 @@ Size=364,838
 Collapsed=0
 DockId=0x00000006,0
 
+[Window][State]
+Pos=1584,86
+Size=336,520
+Collapsed=0
+DockId=0x0000000A,0
+
 [Docking][Data]
 DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,22 Size=1920,1058 Split=X
-  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1929,1394 Split=Y
+  DockNode      ID=0x00000003 Parent=0x3BC79352 SizeRef=1582,1394 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=2495,1105 Split=X Selected=0xAF4A00B3
       DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1118,769 CentralNode=1 Selected=0xAF4A00B3
       DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=364,769 Selected=0x6D19DD9F
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=2495,287 Selected=0x93CE11C7
-  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=564,1394 Selected=0x4F8F5D97
+  DockNode      ID=0x00000004 Parent=0x3BC79352 SizeRef=336,1394 Split=Y Selected=0x82D79681
+    DockNode    ID=0x00000007 Parent=0x00000004 SizeRef=434,584 Split=Y Selected=0x82D79681
+      DockNode  ID=0x00000009 Parent=0x00000007 SizeRef=434,62 Selected=0x82D79681
+      DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=434,520 Selected=0x6252FDFF
+    DockNode    ID=0x00000008 Parent=0x00000004 SizeRef=434,472 Selected=0x4F8F5D97
 
