--- a/code/assets/settings/RobotSettings.json
+++ b/code/assets/settings/RobotSettings.json
@@ -1,33 +1,8 @@
 [
    {
-      "key" : "underLegLength",
+      "key" : "hipOffsetX ",
       "type" : "float",
-      "value" : 250
-   },
-   {
-      "key" : "footRadius",
-      "type" : "float",
-      "value" : 20
-   },
-   {
-      "key" : "bodyYStart",
-      "type" : "float",
-      "value" : 80
-   },
-   {
-      "key" : "upperLegLength",
-      "type" : "float",
-      "value" : 210
-   },
-   {
-      "key" : "bodyLength",
-      "type" : "float",
-      "value" : 352
-   },
-   {
-      "key" : "hipOffsetZ",
-      "type" : "float",
-      "value" : 79
+      "value" : 60
    },
    {
       "key" : "bodyWidth",
@@ -35,13 +10,43 @@
       "value" : 120
    },
    {
-      "key" : "hipOffsetX ",
-      "type" : "float",
-      "value" : 60
-   },
-   {
       "key" : "bodyXStart",
       "type" : "float",
       "value" : -27
+   },
+   {
+      "key" : "hipOffsetZ",
+      "type" : "float",
+      "value" : 79
+   },
+   {
+      "key" : "bodyLength",
+      "type" : "float",
+      "value" : 352
+   },
+   {
+      "key" : "upperLegLength",
+      "type" : "float",
+      "value" : 210
+   },
+   {
+      "key" : "bodyYStart",
+      "type" : "float",
+      "value" : 80
+   },
+   {
+      "key" : "underLegLength",
+      "type" : "float",
+      "value" : 250
+   },
+   {
+      "key" : "bodyY",
+      "type" : "float",
+      "value" : 300
+   },
+   {
+      "key" : "footRadius",
+      "type" : "float",
+      "value" : 20
    }
 ]
